--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="az">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Musiqi Duellosu | Hesab İdarəetməsi</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap');
@@ -13,9 +13,16 @@
             --neon-blue: #00d2ff;
             --neon-pink: #ff007a;
             --text: #ffffff;
+            /* Dinamik şrift ölçüsü: minimum 14px, ekran böyüdükcə artır */
+            --base-font: clamp(0.875rem, 0.5vw + 0.75rem, 1.125rem);
         }
 
-        * { margin: 0; padding: 0; box-sizing: border-box; }
+        * { 
+            margin: 0; 
+            padding: 0; 
+            box-sizing: border-box;
+            -webkit-tap-highlight-color: transparent; /* Mobil üçün toxunuş rəngini silir */
+        }
 
         body {
             font-family: 'Space Grotesk', sans-serif;
@@ -25,47 +32,51 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            overflow-x: hidden;
+            font-size: var(--base-font);
+            padding: 1rem;
         }
 
-        /* Arxa fon effektləri */
+        /* Arxa fon effektləri - Responsive ölçülər */
         .orb {
             position: absolute;
-            width: 400px; height: 400px;
+            width: clamp(200px, 50vw, 500px);
+            height: clamp(200px, 50vw, 500px);
             border-radius: 50%;
-            filter: blur(80px);
+            filter: blur(min(80px, 10vw));
             z-index: -1;
-            opacity: 0.4;
+            opacity: 0.3;
             animation: drift 20s infinite alternate;
         }
-        .orb-1 { background: var(--neon-blue); top: -10%; left: -10%; }
-        .orb-2 { background: var(--neon-pink); bottom: -10%; right: -10%; animation-delay: -5s; }
+        .orb-1 { background: var(--neon-blue); top: -5%; left: -5%; }
+        .orb-2 { background: var(--neon-pink); bottom: -5%; right: -5%; animation-delay: -5s; }
 
         @keyframes drift {
             from { transform: translate(0, 0) scale(1); }
-            to { transform: translate(100px, 50px) scale(1.2); }
+            to { transform: translate(10%, 10%) scale(1.1); }
         }
 
         .main-card {
-            width: 95%;
-            max-width: 450px;
+            width: 100%;
+            max-width: 480px; /* Maksimum genişlik */
             background: var(--glass);
             backdrop-filter: blur(25px) saturate(150%);
+            -webkit-backdrop-filter: blur(25px) saturate(150%);
             border: 1px solid var(--border);
-            border-radius: 40px;
-            padding: 40px;
+            border-radius: clamp(24px, 5vw, 40px);
+            padding: clamp(1.5rem, 5vw, 2.5rem);
             position: relative;
             box-shadow: 0 25px 50px rgba(0,0,0,0.5);
         }
 
-        /* Musiqi Visualizer Effekti */
+        /* Musiqi Visualizer */
         .visualizer {
             display: flex;
             align-items: flex-end;
             justify-content: center;
             gap: 4px;
-            height: 30px;
-            margin-bottom: 20px;
+            height: 2rem;
+            margin-bottom: 1.5rem;
         }
         .bar {
             width: 4px;
@@ -84,112 +95,129 @@
 
         h1 {
             text-align: center;
-            font-size: 1.8rem;
-            letter-spacing: -1px;
-            margin-bottom: 30px;
+            font-size: clamp(1.4rem, 4vw, 2rem);
+            letter-spacing: -0.03em;
+            margin-bottom: 2rem;
             background: linear-gradient(to right, #fff, #888);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            font-weight: 700;
         }
 
-        /* İnteraktiv Addımlar */
         .step-pill {
-            background: rgba(255,255,255,0.05);
+            background: rgba(255,255,255,0.04);
             border: 1px solid var(--border);
-            border-radius: 20px;
-            padding: 15px 20px;
-            margin-bottom: 12px;
+            border-radius: 18px;
+            padding: 1rem;
+            margin-bottom: 0.75rem;
             display: flex;
             align-items: center;
-            gap: 15px;
-            transition: 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            gap: 1rem;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
         .step-pill:hover {
-            background: rgba(255,255,255,0.1);
-            transform: scale(1.05) rotateX(10deg);
+            background: rgba(255,255,255,0.08);
+            transform: translateY(-3px);
             border-color: var(--neon-blue);
-            box-shadow: 0 10px 20px rgba(0,210,255,0.2);
         }
 
         .icon-box {
-            width: 40px; height: 40px;
+            width: 2.5rem; 
+            height: 2.5rem;
             background: linear-gradient(135deg, var(--neon-blue), var(--neon-pink));
-            border-radius: 12px;
+            border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-weight: bold;
+            font-weight: 700;
             color: #000;
+            font-size: 0.9rem;
+            flex-shrink: 0;
         }
 
-        .info h3 { font-size: 0.9rem; margin-bottom: 2px; }
-        .info p { font-size: 0.75rem; color: #aaa; }
+        .info h3 { font-size: 0.95rem; margin-bottom: 2px; color: #fff; }
+        .info p { font-size: 0.8rem; color: #94a3b8; line-height: 1.4; }
 
-        /* Məlumat Silinmə Paneli */
         .warning-zone {
-            margin-top: 30px;
-            padding: 20px;
-            border-radius: 24px;
+            margin-top: 1.5rem;
+            padding: 1.25rem;
+            border-radius: 20px;
             background: linear-gradient(145deg, rgba(255,0,122,0.1), transparent);
-            border: 1px solid rgba(255,0,122,0.2);
+            border: 1px solid rgba(255,0,122,0.15);
         }
 
         .warning-zone header {
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 8px;
             color: var(--neon-pink);
-            font-size: 0.8rem;
-            font-weight: bold;
+            font-size: 0.75rem;
+            font-weight: 700;
             text-transform: uppercase;
-            margin-bottom: 15px;
+            margin-bottom: 1rem;
+            letter-spacing: 0.05em;
         }
 
         .data-grid {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 8px;
         }
 
         .data-chip {
             font-size: 0.7rem;
-            color: #eee;
-            background: rgba(0,0,0,0.3);
-            padding: 6px 10px;
+            color: #cbd5e1;
+            background: rgba(0,0,0,0.4);
+            padding: 8px;
             border-radius: 8px;
             text-align: center;
+            border: 1px solid rgba(255,255,255,0.03);
         }
 
         .shimmer-btn {
             width: 100%;
-            margin-top: 25px;
-            padding: 15px;
-            border-radius: 18px;
+            margin-top: 1.5rem;
+            padding: 1.1rem;
+            border-radius: 16px;
             border: none;
             background: #fff;
             color: #000;
             font-family: inherit;
             font-weight: 700;
+            font-size: 1rem;
             cursor: pointer;
             position: relative;
             overflow: hidden;
+            transition: transform 0.2s;
         }
+
+        .shimmer-btn:active { transform: scale(0.97); }
 
         .shimmer-btn::after {
             content: "";
             position: absolute;
             top: 0; left: -100%;
             width: 50%; height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.8), transparent);
-            transition: 0.5s;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.9), transparent);
             animation: shimmer 3s infinite;
         }
 
-        @keyframes shimmer {
-            100% { left: 150%; }
+        @keyframes shimmer { 100% { left: 150%; } }
+
+        .footer-text {
+            text-align: center;
+            font-size: 0.75rem;
+            color: #64748b;
+            margin-top: 1.5rem;
+            line-height: 1.5;
         }
 
+        /* Balaca ekranlar üçün əlavə düzəliş */
+        @media (max-width: 360px) {
+            .main-card { padding: 1.2rem; }
+            .data-grid { grid-template-columns: 1fr; }
+        }
     </style>
 </head>
 <body>
@@ -197,8 +225,8 @@
     <div class="orb orb-1"></div>
     <div class="orb orb-2"></div>
 
-    <div class="main-card">
-        <div class="visualizer">
+    <main class="main-card">
+        <div class="visualizer" aria-hidden="true">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
@@ -232,7 +260,7 @@
             </div>
         </div>
 
-        <div class="warning-zone">
+        <section class="warning-zone">
             <header>⚡ Bütün Data Silinir</header>
             <div class="data-grid">
                 <div class="data-chip">Musiqi Xalları</div>
@@ -240,14 +268,14 @@
                 <div class="data-chip">Coin Balansı</div>
                 <div class="data-chip">Dost Siyahısı</div>
             </div>
-        </div>
+        </section>
 
         <button class="shimmer-btn">Davam Etmək İstəmirəm</button>
         
-        <p style="text-align: center; font-size: 0.7rem; color: #555; margin-top: 20px;">
+        <footer class="footer-text">
             Məlumatlar 30 gün sonra əbədi olaraq silinəcək.
-        </p>
-    </div>
+        </footer>
+    </main>
 
 </body>
 </html>
