--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="icon-box">02</div>
             <div class="info">
                 <h3>Sistem Ayarları</h3>
-                <p>Profil > Tənzimləmələr bölməsi</p>
+                <p> Tənzimləmələr bölməsi</p>
             </div>
         </div>
 
@@ -266,7 +266,6 @@
                 <div class="data-chip">Musiqi Xalları</div>
                 <div class="data-chip">Nailiyyətlər</div>
                 <div class="data-chip">Coin Balansı</div>
-                <div class="data-chip">Dost Siyahısı</div>
             </div>
         </section>
 
